syntax = "proto3";
option go_package = "github.com/elnosh/gonuts/cashurpc";

enum MethodType {
  BOLT11 = 0;
  SAT = 1;
  // add more if needed
}

enum ContactType {
  EMAIL = 0;
  TWITTER = 1;
  NOSTR = 2;
}

message NutDetails {
  repeated MethodType methods = 1;
  bool disabled = 2;
  bool supported = 3;
}

message Nut {
  int32 id = 1;
  NutDetails nutDetails = 2;
}

message Contact {
  ContactType type = 1;
  string info = 2;
}

message InfoRequest {
  
}
message InfoResponse {
  string name = 1;
  string pubkey = 2;
  string version = 3;
  string description = 4;
  string description_long = 5;
  repeated Contact contact = 6;
  string motd = 7;
  map<int32, NutDetails> nuts = 8;
}

